Constant fold number-to-string conversions